Ajout newsletter sans condition auto

--- a/public/assets/css/loginstyle.css
+++ b/public/assets/css/loginstyle.css
@@ -556,7 +556,7 @@ Utilitaires
 
     /** Links category **/
     #low_nav_desktop ul li a{
-        padding: 10px 15px;
+        padding: 20px 2.72%;
     }
 
     .at-grid{
