--- a/public/assets/css/contact-style.css
+++ b/public/assets/css/contact-style.css
@@ -4,16 +4,16 @@
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web);
 
 
-#hire {
+#contact_us #hire {
   font-size: 62.5%;
   font-weight: 300;
   color: #B6B6B6;
   font-family: 'Titillium Web', sans-serif;
 }
 
-#contact{
+#contact_us #contact{
   background: #efefef;
-  margin: 60px auto 120px;
+  margin: 0px auto 120px;
   text-align: center;
   padding: 0 0 50px 0px;
   width: 80%;
@@ -22,7 +22,7 @@
   border-top: 15px solid #313A3D;
 }
 
-#contact h1 {
+#contact_us #contact h2 {
   margin-bottom: 40px;
   font-size: 4em;
   font-family: 'Lobster', cursive;
@@ -30,17 +30,16 @@
   margin:50px 0px;
 }
 
-form {
+#contact_us form {
   width: 58.33333%;
   margin: 0 auto;
 }
-form .field {
+#contact_us form .field {
   width: 100%;
   position: relative;
   margin-bottom: 15px;
 }
-form .field label {
-  text-transform: uppercase;
+#contact_us form .field label {
   position: absolute;
   top: 0;
   left: 0;
@@ -57,7 +56,7 @@ form .field label {
   color:white;
 }
 
-form .field label + span {
+#contact_us form .field label + span {
   font-family: 'SSStandard';
   opacity: 0;
   color: white;
@@ -75,8 +74,8 @@ form .field label + span {
 }
 
 
-form .field input[type="text"],
-form .field textarea {
+#contact_us form .field input[type="text"],
+#contact_us form .field textarea {
   border: none;
   margin-bottom: 20px;
   background: #E8E9EA;
@@ -87,10 +86,9 @@ form .field textarea {
   color: black;
   font-size: 1.4em;
   letter-spacing: 0.05em;
-  text-transform: uppercase;
 }
-form .field input[type="text"]#msg,
-form .field textarea#msg {
+#contact_us form .field input[type="text"]#msg,
+#contact_us form .field textarea#msg {
   height: 50px;
   margin-bottom: 20px;
   resize: none;
@@ -100,40 +98,39 @@ form .field textarea#msg {
   -ms-transition: all 333ms ease-in-out;
   transition: all 333ms ease-in-out;
 }
-form .field input[type="text"]:focus, form .field input[type="text"].focused,
-form .field textarea:focus,
-form .field textarea.focused {
+#contact_us form .field input[type="text"]:focus, #contact_us form .field input[type="text"].focused,
+#contact_us form .field textarea:focus,
+#contact_us form .field textarea.focused {
   outline: none;
 }
-form .field input[type="text"]:focus#msg, form .field input[type="text"].focused#msg,
-form .field textarea:focus#msg,
-form .field textarea.focused#msg {
+#contact_us form .field input[type="text"]:focus#msg, #contact_us form .field input[type="text"].focused#msg,
+#contact_us form .field textarea:focus#msg,
+#contact_us form .field textarea.focused#msg {
   padding-bottom: 200px;
 }
-form .field input[type="text"]:focus + label, form .field input[type="text"].focused + label,
-form .field textarea:focus + label,
-form .field textarea.focused + label {
+#contact_us form .field input[type="text"]:focus + label, #contact_us form .field input[type="text"].focused + label,
+#contact_us form .field textarea:focus + label,
+#contact_us form .field textarea.focused + label {
   width: 18%;
   background: #D1D2D2;
   color: #313A3D;
 }
 
-form .field input[type="text"].focused + label,
-form .field textarea.focused + label {
+#contact_us form .field input[type="text"].focused + label,
+#contact_us form .field textarea.focused + label {
   color: #FD9638;
 }
 
-form .field:hover label {
+#contact_us form .field:hover label {
   width: 18%;
   background: #313A3D;
   color: white;
 }
-form input[type="submit"] {
+#contact_us form input[type="submit"], #contact_us #back_home{
   background:#313A3D;
   color: white;
   -webkit-appearance: none;
   border: none;
-  text-transform: uppercase;
   position: relative;
   padding: 13px 50px;
   font-size: 1.4em;
@@ -148,29 +145,38 @@ form input[type="submit"] {
   margin-top:50px;
   margin-bottom:30px;
 }
-form input[type="submit"]:hover {
+
+#contact_us #back_home{
+  display: block;
+  width: 50%;
+  margin: 120px auto 0;
+  text-decoration: none;
+  text-align: center;
+}
+
+#contact_us form input[type="submit"]:hover, #contact_us #back_home:hover{
   background: #80C2BB;
   color: white;
 }
-form input[type="submit"]:focus {
+#contact_us form input[type="submit"]:focus, #contact_us #back_home:focus{
   outline: none;
   background: #D1D2D2;
 }
 
-form input[type="submit"]:active {
+#contact_us form input[type="submit"]:active, #contact_us #back_home:active{
   outline: none;
   background: #D1D2D2;
 }
 
 
-.errors{
+#contact_us .errors{
   font-size: 18px;
   color: #1D8C7E;
 }
 
 
 /* Si les infos ont été insérées en BDD */
-.contact_success{
+#contact_us .contact_success{
   font-size:20px;
   color:#80C2BB;
   padding: 20px 0 100px 0px;
@@ -178,26 +184,39 @@ form input[type="submit"]:active {
 
 @media (max-width: 992px) and (min-width: 768px){
 
-  #contact{
+  #contact_us #back_home span{
+    display: none;
+  }
+
+  #contact_us #contact{
     font-size: 1.2em;
   }
 
-  #contact h1{
+  #contact_us #contact h1{
     font-size: 5em;
   }
 }
 
 @media (max-width: 768px) and (min-width: 500px){
 
-  #contact{
+  #contact_us #contact{
     font-size: 1.2em;
     width: 95%;
   }
+
+  #contact_us #back_home span{
+    display: none;
+  }
+
+  #contact_us #back_home{
+    width: 70%;
+  }
+
 }
 
 @media (max-width: 500px){
   
-  #contact{
+  #contact_us #contact{
     width: 100%;
     font-size: 1.2em;
     border-top: none;
@@ -207,11 +226,20 @@ form input[type="submit"]:active {
     padding-top: 2px;
   }
 
-  form{
+  #contact_us #back_home span{
+    display: none;
+  }
+
+  #contact_us #back_home{
+    font-size: 1em;
+    width: 100%;
+  }
+
+  #contact_us form{
     width: 90%;
   }
 
-  form .field input[type="text"], form .field textarea{
+  #contact_us form .field input[type="text"], form .field textarea{
     width: 100%;
   }
 }
