--- a/public/assets/css/layout-style.css
+++ b/public/assets/css/layout-style.css
@@ -14,6 +14,10 @@
 /*****************************
 		  UTILITAIRES
  *****************************/
+body section:first-of-type{
+	padding-top: 76px;
+}
+
 body #high_nav{
 	font-family: 'Titillium Web', sans-serif;
 	font-size: 16px;
@@ -33,7 +37,12 @@ body #high_nav{
 /*****************************
 		HIGH NAVIGATION
  *****************************/
-
+header{
+	position: fixed;
+	width: 100%;
+	margin: auto;
+	z-index: 5000;
+}
 /*** Titre principal ***/
 #high_nav h1{
 	float: left;
@@ -302,6 +311,10 @@ footer p{
 		width: 650px;
 	}
 
+	body section:first-of-type{
+	padding-top: 122px;
+	}
+
 	/*** High navigation ***/
 	#high_nav{
 		padding-top: 10px;
@@ -340,6 +353,10 @@ footer p{
 	/** Utilitaires **/
 	.container{
 		width: 90%;
+	}
+
+	body section:first-of-type{
+	padding-top: 166px;
 	}
 
 	/*** Titre principal ***/
