--- a/public/assets/css/account-user.sass
+++ b/public/assets/css/account-user.sass
@@ -19,10 +19,16 @@
         vertical-align: baseline
 
     label
-
       font-size: 20px
       display: block
       line-height: 30px
+    strong
+      color: #2aabd2
+      font-size: 15px
+    a
+      font-size: 15px
+      color: #66d9ef
+
     input
       display: inline-block
       height: 20px
@@ -37,6 +43,6 @@
       color: #80C2BB
       background-color: #1b1b1b
       font-size: 20px
-    a
+    .redirect a
       color: #80C2BB
       font-size: medium
