--- a/public/assets/css/search-style.css
+++ b/public/assets/css/search-style.css
@@ -37,6 +37,11 @@
 	display: block;
 }
 
+.shop_discovery a{
+	text-decoration: none;
+	color: #FFF;
+}
+
 #search_shop h3{
 	font-family: 'Lobster', cursive;
 	background-color:  white;
