--- a/public/assets/css/shopviewstyle.css
+++ b/public/assets/css/shopviewstyle.css
@@ -1,7 +1,9 @@
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
 @font-face {
 	src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/polar.otf");
 	font-family: 'Polar';
 }
+
 *, *:before, *:after {
 	box-sizing: border-box;
 	margin: 0;
@@ -151,7 +153,7 @@ svg {
 	background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-3.jpg");
 }
 .slide:nth-child(1) .slide__overlay-path {
-	fill: #e99c7e;
+	fill: #80C2BB;
 }
 @media (max-width: 991px) {
 	.slide:nth-child(1) .slide__text {
@@ -166,7 +168,7 @@ svg {
 	background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-2.jpg");
 }
 .slide:nth-child(2) .slide__overlay-path {
-	fill: #e1ccae;
+	fill: #80C2BB;
 }
 @media (max-width: 991px) {
 	.slide:nth-child(2) .slide__text {
@@ -181,28 +183,14 @@ svg {
 	background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-1.jpg");
 }
 .slide:nth-child(3) .slide__overlay-path {
-	fill: #adc5cd;
+	fill: #80C2BB;
 }
 @media (max-width: 991px) {
 	.slide:nth-child(3) .slide__text {
 		background-color: rgba(173, 197, 205, 0.8);
 	}
 }
-.slide:nth-child(4) {
-	left: 300%;
-}
-.slide:nth-child(4) .slide__bg {
-	left: -150%;
-	background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-4.jpg");
-}
-.slide:nth-child(4) .slide__overlay-path {
-	fill: #cbc6c3;
-}
-@media (max-width: 991px) {
-	.slide:nth-child(4) .slide__text {
-		background-color: rgba(203, 198, 195, 0.8);
-	}
-}
+
 .slide__content {
 	position: absolute;
 	top: 0;
@@ -267,7 +255,7 @@ svg {
 .slide__text-heading {
 	font-family: "Polar", Helvetica, Arial, sans-serif;
 	font-size: 5rem;
-	margin-bottom: 2rem;
+	margin-bottom: 3.5rem;
 }
 @media (max-width: 991px) {
 	.slide__text-heading {
@@ -277,7 +265,7 @@ svg {
 }
 .slide__text-desc {
 	font-family: "Open Sans", Helvetica, Arial, sans-serif;
-	font-size: 1.8rem;
+	font-size: 1.5rem;
 	margin-bottom: 1.5rem;
 }
 @media (max-width: 991px) {
@@ -321,8 +309,8 @@ svg {
 	will-change: transform;
 }
 .slide__text-link:hover:before {
-	-webkit-transform: rotateX(0deg);
-	transform: rotateX(0deg);
+	-webkit-transform: rotateX(0);
+	transform: rotateX(0);
 }
 
 /*Partie mini slider*/
@@ -338,7 +326,8 @@ svg {
 	height:550px;
 	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.44);
 	display: flex;
-	left: 300px;
+	left: 90em;
+	top: 30px;
 
 }
 .elementArrowWrapper{
@@ -415,6 +404,7 @@ svg {
 	transform: rotate(-45deg);
 	max-width: 150px;
 	padding: 10px;
+	border-radius: 50px;
 }
 
 .elementContentWrapper {
@@ -486,7 +476,18 @@ svg {
 	/* background-color: #E91E63; */
 	transform: rotate(45deg);
 }
+h5 {
+	font-size: 4.9em;
+	font-family: "Polar", Helvetica, Arial, sans-serif;
+	font-weight: bold;
+	padding-bottom: 20px;
+}
 
+h6 {
+	font-size: 3.5em;
+	font-family: "Open Sans", Helvetica, Arial, sans-serif;
+	padding-bottom: 10px;
+}
 img{width:100%;}
 
 /*.loadPage{
@@ -515,8 +516,8 @@ img{width:100%;}
 
 iframe{
 	display: block;
-	width: 450px;
-	height: 350px;
+	width: 550px;
+	height: 450px;
 	border-radius:5px;
 	position: relative;
 	top: 0px;
@@ -524,3 +525,116 @@ iframe{
 	margin: 70px
 
 }
+/*---------------------------------------------------------------------------------*/
+/*DEBUT RESEAUX SOCIAUX*/
+
+/* ---------- FONTAWESOME ---------- */
+
+
+
+#social_network {
+	width: 991px;
+	height:50px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	border-bottom-width: 50px;
+	margin-bottom: 50px;
+	padding-left: 0px;
+	margin-left: 135px;
+	margin-top: 30px;
+}
+
+#social_network [class*="fontawesome-"] {
+	font-family: 'FontAwesome', sans-serif;
+}
+
+
+#social_network nav {
+	margin: 20px;
+	padding: 0 20px;
+}
+
+#social_network nav ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	background-color: transparent ;
+	padding: 10px 10px;
+	text-align: center;
+	cursor: pointer;
+}
+
+#social_network nav ul li {
+	display: inline-block;
+	padding: 0px;
+	margin: 0px 50px;
+	border: 0px solid white;
+	border-radius: 10px;
+	background-color: white;
+	-webkit-box-shadow: inset 0px 0px 10px black;
+	min-width: 20px;
+	text-align: center;
+	position: relative;
+
+}
+
+#social_network nav ul li div {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	border-radius: 10px;
+	background-color: transparent;
+	-webkit-transition: width 1s, height 1s, top 1s, left 1s;
+	transition: width 1s, height 1s, top 1s, left 1s;
+}
+
+#social_network nav ul li a {
+	width: 20px;
+	height: 20px;
+	text-decoration: none;
+	position: absolute;
+	top: 10px;
+	left: 0px;
+	-webkit-transition: top 1s, left 1s;
+	transition: top 1s, left 1s;
+}
+
+#social_network nav ul li a span {
+	font-size: 7.9em;
+	color: white;
+	text-shadow: 0px 0px 6px #82cec7, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #82cec7;
+	-webkit-transition: color 2s;
+	transition: color 2s;
+}
+
+#social_network nav ul li:hover div {
+	width: 0px;
+	height: 0px;
+	top: -10px;
+	left: 20px;
+}
+#social_network nav ul li:hover a {
+	top: -10px;
+	left: -15px;
+
+}
+#social_network nav ul li:hover a span {
+	/*color:;*/
+}
+
+/* container text two */
+#container_text_two{
+	display: block;
+	width: 60%;
+	float: right;
+}
+
+/* container text two */
+#container_text_two{
+	display: block;
+	width: 60%;
+	float: right;
+}
+
