--- a/public/assets/css/contact-style.css
+++ b/public/assets/css/contact-style.css
@@ -3,16 +3,17 @@
 /* Police des textes */
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web);
 
-#contact_us #hire {
+
+#hire {
   font-size: 62.5%;
   font-weight: 300;
   color: #B6B6B6;
   font-family: 'Titillium Web', sans-serif;
 }
 
-#contact_us #contact {
+#contact{
   background: #efefef;
-    margin: 0px auto 120px;
+  margin: 60px auto 120px;
   text-align: center;
   padding: 0 0 50px 0px;
   width: 80%;
@@ -21,7 +22,7 @@
   border-top: 15px solid #313A3D;
 }
 
-#contact_us #contact h2 {
+#contact h1 {
   margin-bottom: 40px;
   font-size: 4em;
   font-family: 'Lobster', cursive;
@@ -29,16 +30,17 @@
   margin:50px 0px;
 }
 
-#contact_us form {
+form {
   width: 58.33333%;
   margin: 0 auto;
 }
-#contact_us form .field {
+form .field {
   width: 100%;
   position: relative;
   margin-bottom: 15px;
 }
-#contact_us form .field label {
+form .field label {
+  text-transform: uppercase;
   position: absolute;
   top: 0;
   left: 0;
@@ -55,7 +57,7 @@
   color:white;
 }
 
-#contact_us form .field label + span {
+form .field label + span {
   font-family: 'SSStandard';
   opacity: 0;
   color: white;
@@ -72,8 +74,9 @@
   transition: all 333ms ease-in-out;
 }
 
-#contact_us form .field input[type="text"],
-#contact_us form .field textarea {
+
+form .field input[type="text"],
+form .field textarea {
   border: none;
   margin-bottom: 20px;
   background: #E8E9EA;
@@ -84,9 +87,10 @@
   color: black;
   font-size: 1.4em;
   letter-spacing: 0.05em;
+  text-transform: uppercase;
 }
-#contact_us form .field input[type="text"]#msg,
-#contact_us form .field textarea#msg {
+form .field input[type="text"]#msg,
+form .field textarea#msg {
   height: 50px;
   margin-bottom: 20px;
   resize: none;
@@ -96,40 +100,40 @@
   -ms-transition: all 333ms ease-in-out;
   transition: all 333ms ease-in-out;
 }
-#contact_us form .field input[type="text"]:focus, #contact_us form .field input[type="text"].focused,
-#contact_us form .field textarea:focus,
-#contact_us form .field textarea.focused {
+form .field input[type="text"]:focus, form .field input[type="text"].focused,
+form .field textarea:focus,
+form .field textarea.focused {
   outline: none;
 }
-#contact_us form .field input[type="text"]:focus#msg, #contact_us form .field input[type="text"].focused#msg,
-#contact_us form .field textarea:focus#msg,
-#contact_us form .field textarea.focused#msg {
+form .field input[type="text"]:focus#msg, form .field input[type="text"].focused#msg,
+form .field textarea:focus#msg,
+form .field textarea.focused#msg {
   padding-bottom: 200px;
 }
-#contact_us form .field input[type="text"]:focus + label, #contact_us form .field input[type="text"].focused + label,
-#contact_us form .field textarea:focus + label,
-#contact_us form .field textarea.focused + label {
+form .field input[type="text"]:focus + label, form .field input[type="text"].focused + label,
+form .field textarea:focus + label,
+form .field textarea.focused + label {
   width: 18%;
   background: #D1D2D2;
   color: #313A3D;
 }
 
-#contact_us form .field input[type="text"].focused + label,
-#contact_us form .field textarea.focused + label {
+form .field input[type="text"].focused + label,
+form .field textarea.focused + label {
   color: #FD9638;
 }
 
-#contact_us form .field:hover label {
+form .field:hover label {
   width: 18%;
   background: #313A3D;
   color: white;
 }
-
-#contact_us form input[type="submit"], #contact_us #back_home {
+form input[type="submit"] {
   background:#313A3D;
   color: white;
   -webkit-appearance: none;
   border: none;
+  text-transform: uppercase;
   position: relative;
   padding: 13px 50px;
   font-size: 1.4em;
@@ -144,78 +148,48 @@
   margin-top:50px;
   margin-bottom:30px;
 }
-
-#contact_us #back_home {
-    display: block;
-    width: 50%;
-    margin: 120px auto 0;
-    text-decoration: none;
-    text-align: center;
-}
-
-#contact_us form input[type="submit"]:hover, #contact_us #back_home:hover {
+form input[type="submit"]:hover {
   background: #80C2BB;
   color: white;
 }
-
-#contact_us form input[type="submit"]:focus, #contact_us #back_home:focus {
+form input[type="submit"]:focus {
   outline: none;
   background: #D1D2D2;
 }
 
-#contact_us form input[type="submit"]:active, #contact_us #back_home:active {
+form input[type="submit"]:active {
   outline: none;
   background: #D1D2D2;
 }
 
-#contact_us .errors {
+
+.errors{
   font-size: 18px;
   color: #1D8C7E;
 }
 
-
-/* Si les infos ont été insérées en BDD */
-#contact_us .contact_success {
-  font-size:20px;
-  color:#80C2BB;
-  padding: 20px 0 100px 0px;
-}
-
 @media (max-width: 992px) and (min-width: 768px){
 
-    #contact_us #back_home span {
-        display: none;
-    }
-
-    #contact_us #contact {
+  #contact{
     font-size: 1.2em;
   }
 
-    #contact_us #contact h1 {
+  #contact h1{
     font-size: 5em;
   }
 }
 
 @media (max-width: 768px) and (min-width: 500px){
 
-    #contact_us #contact {
+  #contact{
     font-size: 1.2em;
     width: 95%;
   }
-
-    #contact_us #back_home span {
-        display: none;
-    }
-
-    #contact_us #back_home {
-        width: 70%;
-    }
-
 }
 
 @media (max-width: 500px){
-
-    #contact_us #contact {
+  
+  #contact{
     width: 100%;
     font-size: 1.2em;
     border-top: none;
@@ -225,20 +199,11 @@
     padding-top: 2px;
   }
 
-    #contact_us #back_home span {
-        display: none;
-    }
-
-    #contact_us #back_home {
-        font-size: 1em;
-        width: 100%;
-    }
-
-    #contact_us form {
+  form{
     width: 90%;
   }
 
-    #contact_us form .field input[type="text"], form .field textarea {
+  form .field input[type="text"], form .field textarea{
     width: 100%;
   }
 }
