--- a/public/assets/css/search-style.css
+++ b/public/assets/css/search-style.css
@@ -65,21 +65,59 @@
 	margin-left: 0;
 }
 
+#search_shop .shop_discovery a{
+	text-decoration: none;
+	color: #FFF;
+	display: block;
+	box-sizing: border-box;
+}
+
+#search_shop h3, #about_us h3 {
+	font-family: 'Lobster', cursive;
+	background-color:  white;
+	font-size: 35px;
+	font-weight: 700;
+	width: 400px;
+	margin: auto;
+	padding: 13px;
+	text-align: center;
+	position: relative;
+	top: -68px;
+	border: 20px solid #FFF;
+	color:#80C2BB;
+	z-index: 0;
+}
+
+#search_shop h4{
+	font-family: 'Lobster', cursive;
+	color:#FFF;
+	text-shadow: #000000 1px 1px, #000000 -1px 1px, #000000 -1px -1px, #000000 1px -1px;
+}
+
+#search_shop article:first-of-type{
+	margin-left: 0;
+}
+
+#search_shop .container article:nth-of-type(2n){
+	margin-left: 0;
+}
+
 /*** Article découverte boutique ***/
 .shop_discovery{
 	float: left;
 	width: 33.33%;
-	padding-top: 50px;
+	min-height: 410px;
 }
 
-#search_shop img{
-	width: 300px;
+.img_shop_discovery{
+	background-position: center;
+	background-size: cover;
+	width: 85%;
 	height: 200px;
-	display: block;
-	margin: -54px auto;
+	margin: auto;
 }
 
-#search_shop img:hover{
+.img_shop_discovery:hover{
 	background-color:#80C2BB;
 	opacity:0.5; 
 }
@@ -87,13 +125,17 @@
 .shop_title{
 	text-align: center;
 	font-size: 30px;
-	padding-top: 15px;
+	padding: 15px 15px 0;
+	max-width: 90%;
+	margin: auto;
 }
 
 .shop_discovery p{
-	padding: 30px;
+	padding: 30px 20px;
 	font-size: 16px;
 	text-align:justify;
+	color: #8A8888;
+	margin: auto;
 }
 
 /*******************
