--- a/public/assets/css/add-shop-style.css
+++ b/public/assets/css/add-shop-style.css
@@ -158,7 +158,7 @@
 }
 
 /* LES BOUTONS DE SOUMISSION OU D'ANNULATION, DE PREVISUALISATION ECT... */
-#add-shop p button{
+#add-shop p button, #add-shop a{
     background:#313A3D;
     color: white;
     -webkit-appearance: none;
@@ -179,6 +179,27 @@
     margin:0 auto;
 }
 
+#add-shop #cancel_link{
+    background:#313A3D;
+    color: white;
+    -webkit-appearance: none;
+    border: none;
+    text-transform: uppercase;
+    position: relative;
+    padding: 13px 50px;
+    font-size: 0.7em;
+    letter-spacing: 0.1em;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    -webkit-transition: all 333ms ease-in-out;
+    -moz-transition: all 333ms ease-in-out;
+    -o-transition: all 333ms ease-in-out;
+    -ms-transition: all 333ms ease-in-out;
+    transition: all 333ms ease-in-out;
+    display:block;
+    margin:0 auto;
+    text-decoration:none;
+}
 /* LES BOUTONS AU SURVOL */
 #add-shop button:hover {
     background: #80C2BB;
@@ -186,7 +207,7 @@
 }
 
 
-/* RESPONSIVE */
+/* -------------------------------------RESPONSIVE---------------------------------- */
 
 /*supérieur à 1200px */
 @media (min-width:1200px){
