--- a/public/assets/css/shopstyles.css
+++ b/public/assets/css/shopstyles.css
@@ -183,7 +183,7 @@
     -ms-transition: all 333ms ease-in-out;
     transition: all 333ms ease-in-out;
     display:block;
-    margin:0 auto;
+    margin:50px auto;
 }
 
 /* LE LIEN */
