--- a/public/assets/css/shopviewstyle.css
+++ b/public/assets/css/shopviewstyle.css
@@ -4,6 +4,8 @@
 	font-family: 'Polar';
 }
 
+
+
 *, *:before, *:after {
 	box-sizing: border-box;
 	margin: 0;
@@ -11,6 +13,7 @@
 	cursor: auto;
 
 }
+
 #boutik {
 	padding-top: 20px;
 	font-size: 62.5%;
@@ -230,9 +233,9 @@ svg {
 }
 .slide__text {
 	position: absolute;
-	width: 25%;
+	width: 30%;
 	bottom: 15%;
-	left: 12%;
+	left: 5%;
 	color: #fff;
 	-webkit-transition: opacity 0.5s 0.8s, -webkit-transform 0.5s 0.8s;
 	transition: opacity 0.5s 0.8s, -webkit-transform 0.5s 0.8s;
@@ -261,8 +264,9 @@ svg {
 }
 .slide__text-heading {
 	font-family: "Polar", Helvetica, Arial, sans-serif;
-	font-size: 5rem;
-	margin-bottom: 2.5rem;
+	font-size: 4.3rem;
+	margin-bottom: 20px;
+	text-align: left;
 }
 @media (max-width: 991px) {
 	.slide__text-heading {
@@ -272,8 +276,11 @@ svg {
 }
 .slide__text-desc {
 	font-family: "Open Sans", Helvetica, Arial, sans-serif;
-	font-size: 1.5rem;
+	font-size: 1.3rem;
 	margin-bottom: 1.5rem;
+	margin-top: 20px;
+	text-align: justify;
+	line-height: 1.3;
 }
 @media (max-width: 991px) {
 	.slide__text-desc {
@@ -336,13 +343,9 @@ svg {
 	height:550px;
 	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.44);
 	display: flex;
-	left: 90em;
 	top: 30px;
-}
-@media (max-width: 991px) {
-	.elementWrapper {
-		display: none;
-	}
+	float: right;
+	right:15em;
 }
 
 .elementArrowWrapper{
@@ -417,9 +420,9 @@ svg {
 }
 .elementItem img{
 	transform: rotate(-45deg);
-	max-width: 150px;
-	padding: 10px;
 	border-radius: 50px;
+	max-width: 165px;
+	padding: 30px;
 }
 
 .elementContentWrapper {
@@ -476,7 +479,7 @@ svg {
 	z-index:-1;
 	left: 0;
 	height: 400px;
-	background-color: #fff;
+	background-color: rgb(255, 255, 255);
 	transform: rotate(45deg);
 }
 .elementContent:after {
@@ -488,21 +491,27 @@ svg {
 	left: 0;
 	height: 400px;
 	border: 1px solid #fff;
-	/* background-color: #E91E63; */
 	transform: rotate(45deg);
 }
 h5 {
 	font-size: 4.9em;
 	font-family: "Polar", Helvetica, Arial, sans-serif;
 	font-weight: bold;
+	text-align: left;
 }
 
 h6 {
 	font-size: 3.5em;
 	font-family: "Open Sans", Helvetica, Arial, sans-serif;
 	margin-top: 1em;
+	text-align: left;
 }
-img{width:100%;}
+img{
+	width: 200px;
+	right: 32%;
+	position:relative;
+
+}
 
 /*.loadPage{
 	position: absolute;
@@ -536,7 +545,7 @@ iframe{
 	position: relative;
 	top: 0px;
 	float: right;
-	margin: 70px
+	margin: 70px;
 
 }
 /*---------------------------------------------------------------------------------*/
@@ -563,17 +572,12 @@ iframe{
 	font-family: 'FontAwesome', sans-serif;
 }
 
-
-#social_links {
-	padding: 0 20px;
-}
-
 #social_links ul {
 	list-style: none;
 	background-color: transparent ;
-	padding: 10px 10px;
-	text-align: center;
+	margin-left: -55px;
 	cursor: pointer;
+	text-align: left;
 }
 
 #social_links ul li {
@@ -640,25 +644,21 @@ iframe{
 	display: block;
 	width: 60%;
 	float: right;
+	margin-top: 100px;
+	margin-right: -50px;
 }
-
-
-/*Pour css map google*/
-.google_map{
-	width: 600px;
-	height: 400px;
-	float: left;
-	border: 1px solid black;
-}
-
-
-/* ------------------------------RESPONSIVE --------------------------------------------*/
+/*----------------------------------------------------RESPONSIVE------------------------------------------------------*/
+/*De 0 à 550px*/
 @media (max-width: 550px) {
 
 	.containerconnect {
 
 		width: 100%;
 		margin: auto;
+	}
+
+	#boutik .logo {
+		display: none;
 	}
 
 	iframe {
@@ -669,6 +669,7 @@ iframe{
 		position: relative;
 		top: 0px;
 		float: right;
+		right: 45px;
 		margin: 70px 34px 0 20px;
 
 	}
@@ -678,7 +679,7 @@ iframe{
 		font-size: 3rem;
 		margin-bottom: -0.2rem;
 		line-height: 4rem;
-		margin-bottom: 100px;
+
 	}
 
 	h5 {
@@ -686,6 +687,93 @@ iframe{
 		font-family: "Polar", Helvetica, Arial, sans-serif;
 		font-weight: bold;
 		margin-bottom: 0.5rem;
+		display: none;
+	}
+
+	h6 {
+		font-size: 1.5em;
+		font-family: "Open Sans", Helvetica, Arial, sans-serif;
+		margin-bottom: 0.2rem;
+	}
+
+	.slide__text-desc {
+		font-family: "Open Sans", Helvetica, Arial, sans-serif;
+		font-size: 1rem;
+		margin-bottom: 1rem;
+		margin-top: 0px;
+		text-align: center;
+	}
+
+	.slide-1 p {
+		display: none;
+
+	}
+
+	#social_links ul li a span {
+		font-size: 2.9em;
+		color: white;
+		text-shadow: 0px 0px 6px #82cec7, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #82cec7;
+		-webkit-transition: color 2s;
+		transition: color 2s;
+	}
+
+	#social_links ul li {
+		display: inline-block;
+		padding: 0px;
+		border: 0px solid white;
+		border-radius: 10px;
+		background-color: white;
+		-webkit-box-shadow: inset 0px 0px 10px black;
+		min-width: 20px;
+		text-align: center;
+		position: relative;
+		margin-right: 35px;
+	}
+
+	#social_links ul {
+		list-style: none;
+		background-color: transparent;
+		cursor: pointer;
+		position: absolute;
+		top: -450px;
+		width: 412px;
+	}
+}
+
+
+/* Supérieur à 551px et inférieur à 760px */
+@media (min-width: 551px) and (max-width: 760px){
+	iframe{
+		display: block;
+		width: 400px;
+		height: 300px;
+		border-radius: 5px;
+		position: relative;
+		top: 40px;
+		margin: 70px;
+		right: 19px;
+
+	}
+	#container_text_two {
+		display: block;
+		margin-top: 0;
+		margin-right: 0;
+	}
+
+	.slide__text-heading {
+		font-family: "Polar", Helvetica, Arial, sans-serif;
+		font-size: 3rem;
+		margin-bottom: -0.2rem;
+		line-height: 4rem;
+
+	}
+
+	h5 {
+		font-size: 2.3em;
+		font-family: "Polar", Helvetica, Arial, sans-serif;
+		font-weight: bold;
+		margin-bottom: 1rem;
+		display: none;
 	}
 
 	h6 {
@@ -698,11 +786,254 @@ iframe{
 		font-family: "Open Sans", Helvetica, Arial, sans-serif;
 		font-size: 1rem;
 		margin-bottom: 0.5rem;
-	}
-	.slide-1 p,a {
-		display: none;
-		
+		margin-top: 0px;
+		text-align: center;
 	}
 
+	.slide-1 p {
+		display: none;
+
+	}
+
+	#social_links {
+		display: block;
+		bottom: 100em;
+	}
+	#boutik .logo{
+		display: none;
+	}
+
+	#social_links ul li a span {
+		font-size: 2.9em;
+		color: white;
+		text-shadow: 0px 0px 6px #82cec7, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #82cec7;
+		-webkit-transition: color 2s;
+		transition: color 2s;
+	}
+
+	#social_links ul li {
+		display: inline-block;
+		padding: 0px;
+		border: 0px solid white;
+		border-radius: 10px;
+		background-color: white;
+		-webkit-box-shadow: inset 0px 0px 10px black;
+		min-width: 20px;
+		text-align: center;
+		position: relative;
+		margin-right: 35px;
+	}
+
+	#social_links ul {
+		list-style: none;
+		background-color: transparent;
+		cursor: pointer;
+		position: absolute;
+		top: -450px;
+		width: 412px;
+		margin-left: 0px;
+		right: 0px;
+		left: 115px;
+
+	}
 }
 
+/* Supérieur à 761px et inférieur à 992px */
+@media (min-width: 761px) and (max-width: 992px){
+	iframe{
+		display: block;
+		width: 400px;
+		height: 300px;
+		border-radius: 5px;
+		position: relative;
+		top: 40px;
+		margin: 70px;
+		right: 25%;
+
+	}
+
+	#container_text_two {
+		display: block;
+		margin-top: 0;
+		margin-right: 0;
+	}
+
+	.slide__text-heading {
+		font-size: 3.5rem;
+	}
+
+	.slide__text-heading {
+		font-family: "Polar", Helvetica, Arial, sans-serif;
+		font-size: 5rem;
+
+	}
+	.slide__text-heading {
+		font-family: "Polar", Helvetica, Arial, sans-serif;
+		font-size: 3rem;
+		margin-bottom: -0.2rem;
+		line-height: 4rem;
+
+	}
+
+	h5 {
+			font-size: 2.3em;
+			font-family: "Polar", Helvetica, Arial, sans-serif;
+			font-weight: bold;
+			margin-bottom: 0.5rem;
+	}
+	nav h5 {
+		display: none;
+	}
+
+	h6 {
+		font-size: 1.5em;
+		font-family: "Open Sans", Helvetica, Arial, sans-serif;
+		margin-bottom: 0.2rem;
+	}
+
+	.slide__text-desc {
+		font-family: "Open Sans", Helvetica, Arial, sans-serif;
+		font-size: 1rem;
+		margin-bottom: 0.5rem;
+		margin-top: 0px;
+		text-align: center;
+	}
+	.slide-1 p {
+		display: none;
+
+	}
+	#social_links {
+		display: block;
+		bottom: 100em;
+		margin-left: 30%;
+	}
+	#boutik .logo{
+		display: none;
+	}
+
+	#social_links ul li a span {
+		font-size: 2.9em;
+		color: white;
+		text-shadow: 0px 0px 6px #82cec7, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #82cec7;
+		-webkit-transition: color 2s;
+		transition: color 2s;
+	}
+
+	#social_links ul li {
+		display: inline-block;
+		padding: 0px;
+		border: 0px solid white;
+		border-radius: 10px;
+		background-color: white;
+		-webkit-box-shadow: inset 0px 0px 10px black;
+		min-width: 20px;
+		text-align: center;
+		position: relative;
+		margin-right: 35px;
+	}
+
+	#social_links ul {
+		list-style: none;
+		background-color: transparent;
+		cursor: pointer;
+		position: absolute;
+		top: -450px;
+		width: 412px;
+	}
+}
+
+/* Supérieur à 992px et inférieur à 1200px */
+@media (min-width: 993px) and (max-width: 1200px){
+	footer {
+		display: none;
+	}
+	iframe{
+		display: block;
+		width: 500px;
+		height: 300px;
+		border-radius: 5px;
+		position: relative;
+		top: 0px;
+		margin: 70px;
+		right: 50px;
+
+	}
+	#container_text_two {
+		display: block;
+		margin-top: 0;
+		margin-right: 0;
+	}
+
+	.slide__text-heading {
+		font-family: "Polar", Helvetica, Arial, sans-serif;
+		font-size: 3rem;
+		margin-bottom: -0.2rem;
+		line-height: 4rem;
+		text-align: left;
+
+	}
+	h5 {
+		font-size: 2.3em;
+		font-family: "Polar", Helvetica, Arial, sans-serif;
+		font-weight: bold;
+		margin-bottom: 0.5rem;
+	}
+	nav h5 {
+		display: none;
+	}
+
+	h6 {
+		font-size: 1.5em;
+		font-family: "Open Sans", Helvetica, Arial, sans-serif;
+		margin-bottom: 0.2rem;
+	}
+
+	.slide__text-desc {
+		font-family: "Open Sans", Helvetica, Arial, sans-serif;
+		font-size: 1rem;
+		margin-bottom: 0.5rem;
+		margin-top: 0px;
+		text-align: center;
+	}
+	.slide-1 p {
+		display: none;
+
+	}
+	#social_links {
+		display: block;
+		bottom: 100em;
+	}
+	#boutik .logo{
+		display: none;
+	}
+
+	#social_links ul li a span {
+		font-size: 2.9em;
+		color: white;
+		text-shadow: 0px 0px 6px #82cec7, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #82cec7;
+		-webkit-transition: color 2s;
+		transition: color 2s;
+	}
+
+	#social_links ul li {
+		display: inline-block;
+		padding: 0px;
+		border: 0px solid white;
+		border-radius: 10px;
+		background-color: white;
+		-webkit-box-shadow: inset 0px 0px 10px black;
+		min-width: 20px;
+		text-align: center;
+		position: relative;
+		margin-right: 35px;
+	}
+
+	#social_links ul {
+		list-style: none;
+		background-color: transparent;
+		cursor: pointer;
+		position: absolute;
+		top: -450px;
+		width: 412px;
+	}
+}
