--- a/public/assets/css/home-style.css
+++ b/public/assets/css/home-style.css
@@ -541,7 +541,7 @@ ol li a{
 
 	/** Links category **/
 	#low_nav_desktop ul li a{
-	padding: 20px 2.73%;
+		padding: 20px 2.35%;
 	}
 }
 
@@ -768,12 +768,12 @@ ol li a{
 	/** About us **/
 
 	.at-grid{
-		transform: scale(0.8);
+		transform: scale(0.9);
 		border: none;
 	}
 
 	.at-column{
-		padding-top: 0px;
+		padding-top: 20px;
 		padding-bottom: 50px;
 	}
 
@@ -795,6 +795,7 @@ ol li a{
 	        -ms-flex-preferred-size: 100% !important;
 	            flex-basis: 100% !important;
 	    margin: auto;
+	    font-size: 15px;
 	}
 
 	.at-user__avatar img{
